# aaroncodex

./: .env.example  .gitignore  ANDROID.md  HANDOFF.md  LICENSE  NOTICE  ONNX_MODEL_NOTES.md  README.md  SPRINT_0_COMPLETE.md  SPRINT_1_SPECTRAL_PLAN.md  capacitor.config.json  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy-pages.yml
Pulse Web/: index.html  styles.css
android/: build.gradle  gradle.properties  variables.gradle
android/app/: build.gradle  proguard-rules.pro
archive/docs/: training-plan-expansion.md  voxai_technical_implementation.md
archive/handoffs/: CANDI_HANDOFF_REFERENCE_REANALYSIS.md  HANDOFF-HOWARD.md  HANDOFF_LIVE_HARMONIC_SCOPE_COMPLETE_2026-07-14.md
archive/scratch-analyses/: 2026-07-11-aaron-danger-zone-new-studio-take-002_analysis.json  2026-07-11-aaron-g-vienna-take-001_analysis.json  (+4 more)
design/: README.md  fused-orchestrator.md  sync.sh  telemetry-contract.md  vox-kit.css  vox-report.js  vox-suite-concept.html  vox-suite-spec.html  vox-telemetry.js
docs/: AGENT_HANDOFF_METRICS_V2.md  CANDI_HANDOFF_DEEP_ANALYSIS.md  HANDOFF-TESTING.md  REFERENCE_PACK_ROSTER.md  beta-readiness-audit.md  dependency-license-audit.md  entry-points.md  metrics-methodology.md  pdf-reporting.md  phase1-flow.md  pulse-vocal-plan.md  saas-mvp.md  separation-model-swap-plan.md  vox-cleanup-plan.md  vox-unify-plan.md
pitchmonitor/: README.md  index.html
public/: robots.txt  sitemap.xml
python_worker/: README.md  app.py  models.py  requirements.txt
scripts/: candi_phase1.py  check-android-build-env.mjs  fetch_reference.py  patch-capacitor-android-host.mjs  prepare-android-model.mjs  test-coach-writer.mjs
server/: config.js  extract.js  index.js  pulse.js
src/: AnalysisDetail.tsx  App.css  App.jsx  Chat.tsx  History.tsx  MagicPolish.tsx  RecordingStudio.tsx  const.ts  index.css
vox-analysis/: README.md
voxanalysis/: .env.example  .gitignore  README.md
voxpolish/: .gitignore  README.md  TESTING.md  pyproject.toml
voxpolish/src/voxpolish/: __init__.py  audio_io.py  cli.py  document.py  dsp.py  measure.py  pipeline.py
voxpolish/src/voxpolish.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
voxpolish/src/voxpolish/server/: app.py  session.py  workspace.py
voxpolish/src/voxpolish/server/static/: app.js  deck.html  index.html  style.css  vox-about.js  vox-kit.css  vox-record.css  vox-record.js  vox-telemetry.js  vox-theme.js  vox-tokens.css
voxpolish/src/voxpolish/stages/: bleed.py  breath.py  clean.py  dynamics.py  gate.py  master.py  pitch.py  render.py  separation.py  sibilance.py
voxpolish/tests/: conftest.py  test_bleed.py  test_delta.py  test_gate_safety.py  test_local_safety.py  test_mastering.py  test_pipeline.py  test_pitch.py  test_pitch_apply.py  test_remix.py  test_render_controls.py  test_separation.py  test_server.py  test_session_tune.py  test_stages.py  test_workspace.py
voxsuite/: README.md  pyproject.toml
voxsuite/src/voxsuite/: __init__.py  engines.py  orchestrator.py
voxsuite/src/voxsuite/server/: __init__.py  app.py  unified.py
voxsuite/src/voxsuite/server/static/: deck.html  vox-kit.css  vox-record.css  vox-report.css  vox-tokens.css
voxsuite/tests/: test_app.py  test_orchestrator.py  test_unified.py
youtube-downloader/: README.md  reference_dl.py
(+269 files in other folders)
