[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voxsuite"
version = "0.1.0"
description = "VOX Suite — Fused orchestrator: one upload through both vocal engines."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# The real engine adapter needs both engines installed alongside voxsuite.
engines = ["voxpolish"]
test = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]
