[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voxsuite"
version = "0.1.0"
description = "VOX Suite — Fused orchestrator: one upload through both vocal engines."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
# The real engine adapter needs both engines installed alongside voxsuite.
engines = ["voxpolish"]
test = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
# One command runs the whole suite (Analyze + Polish + Fused) on one port.
vox = "voxsuite.server.unified:main"

[tool.setuptools.packages.find]
where = ["src"]
